Almost done : height correction
Height that work evrywhere : need to fix the last bug (scrollbar take 20px height and destroy the entire height system)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,19 +1,34 @@
 body, html {
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     background-color: #101010;
     font-size: 1em;
 }
 
+body {
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
+}
+
 nav{
-    height: auto!important;
+    line-height: 0px!important;
 }
 
 nav .brand-logo {
 	padding-left: 1rem !important;
     font-size: 1.8rem!important;
+    line-height: 64px!important;
+}
+
+.tabs {
+    display: flex;
 }
 
 @media only screen and (max-width: 992px){
@@ -31,13 +46,14 @@ nav i, nav i.material-icons {
 .container {
   display: flex;
   flex: 1 1 auto;
-  width: 100% !important;
-  max-width: 80000px !important;
-    height: 85vh!important;
+    width: 100% !important;
+    height: inherit;
+    max-height: 80vh;
 }
 
 .horizontal {
     flex-direction: row;
+
 }
 
 @media (max-width:600px){
